--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-job-preference/create-candidate-job-preference.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-job-preference/create-candidate-job-preference.component.html
@@ -109,7 +109,7 @@
 						(onAddressChange)="handleAddressChange($event)"
 						[options]='options' id="preferredLocation"
 						ngx-google-places-autocomplete
-						
+							autocomplete="disabled" 
 							[matChipInputFor]="chipList"
 							[matChipInputSeparatorKeyCodes]="separatorKeysCodes"
 							[matChipInputAddOnBlur]="addOnBlur"
