--- a/frontend/src/app/modules/features/user/user-dashboard/user-dashboard.component.html
+++ b/frontend/src/app/modules/features/user/user-dashboard/user-dashboard.component.html
@@ -56,12 +56,12 @@
                <small id="appliedCountValue" >(0)</small> 
             </a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a (click)="onTabChange({tabName: 'shortlisted', tabNumber: 5})"
               [ngClass]="{'active': currentTabInfo.tabNumber == 5}" class="nav-link" href="javascript:;">
               {{"dashboard.shortlisted" | translate}}
               <small id="shortlistedJob">(0)</small></a>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a (click)="onTabChange({tabName: 'resume', tabNumber: 6})"
               [ngClass]="{'active': currentTabInfo.tabNumber == 6}" class="nav-link" href="javascript:;">
