--- a/frontend/src/app/modules/features/employer/post-job/job-information/job-information.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/job-information/job-information.component.html
@@ -71,7 +71,7 @@
 		<div class="col-lg-4 col-md-6">
 			<div class=" form-group">
 				<label>{{"postYourResume.city" | translate}}</label>
-				<input appMarkAsterisk ngx-google-places-autocomplete
+				<input autocomplete="disabled" appMarkAsterisk ngx-google-places-autocomplete
 				(onAddressChange)="handleAddressChange($event)"
 				formControlName="city" type="text" class="form-control text-capitalize" [placeholder]="'postYourResume.city' | translate">
 			</div>
@@ -80,7 +80,7 @@
 		<div class="col-lg-4 col-md-6">
 			<div class=" form-group">
 				<label>{{"postYourResume.state" | translate}}</label>
-				<input appMarkAsterisk formControlName="state" type="text" class="form-control text-capitalize" [placeholder]="'postYourResume.state' | translate">
+				<input  autocomplete="disabled"  appMarkAsterisk formControlName="state" type="text" class="form-control text-capitalize" [placeholder]="'postYourResume.state' | translate">
 				<app-control-messages [control]="f['state']"></app-control-messages>
 			</div>
 		</div>
@@ -89,14 +89,14 @@
 		<div class="col-lg-4 col-md-6">
 			<div class=" form-group">
 				<label>{{"postYourResume.zipCode" | translate}}</label>
-				<input appMarkAsterisk numbersOnly formControlName="zipcode" type="text" class="form-control" [placeholder]="'postYourResume.zipCode' | translate">
+				<input autocomplete="disabled" appMarkAsterisk numbersOnly formControlName="zipcode" type="text" class="form-control" [placeholder]="'postYourResume.zipCode' | translate">
 			</div>
 			<app-control-messages [control]="f['zipcode']"></app-control-messages>
 		</div>
 		<div class="col-lg-4 col-md-6">
 			<div class=" form-group">
 				<label>{{"postJob.country" | translate}}</label>
-				<input appMarkAsterisk formControlName="country" type="text" class="form-control text-uppercase" [placeholder]="'postYourResume.country' | translate">
+				<input  autocomplete="disabled"  appMarkAsterisk formControlName="country" type="text" class="form-control text-uppercase" [placeholder]="'postYourResume.country' | translate">
 			</div>
 			<app-control-messages [control]="f['country']"></app-control-messages>
 		</div>
