--- a/frontend/src/app/modules/features/employer/post-job/screening-process/screening-process.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/screening-process/screening-process.component.html
@@ -9,7 +9,7 @@
 	</div>
 	<div class="col-lg-12" *ngIf="screeningProcess && screeningProcess.length && t.controls.length == 0 ">
 		<div class="row mt-3 mb-3">
-			<div class="col-lg-4 sidebar-widgets" *ngFor="let items of screeningProcess;let i=index">
+			<div class="col-lg-3 col-md-6 sidebar-widgets" *ngFor="let items of screeningProcess;let i=index">
 				<div class="text-left">
 					<div class=" form-group">
 						<div class="custom-control custom-checkbox mb-2">
