--- a/frontend/src/app/modules/features/employer/profile/create-employer-profile/create-employer-profile.component.html
+++ b/frontend/src/app/modules/features/employer/profile/create-employer-profile/create-employer-profile.component.html
@@ -45,14 +45,14 @@
 
           <div class=" form-group">
             <label>{{"postYourResume.city" | translate}}</label>
-            <input appMarkAsterisk ngx-google-places-autocomplete (onAddressChange)="handleAddressChange($event)"
+            <input autocomplete="disabled" appMarkAsterisk ngx-google-places-autocomplete (onAddressChange)="handleAddressChange($event)"
               formControlName="city" type="text" class="form-control text-capitalize"
               [placeholder]="'postYourResume.city' | translate">
               <app-control-messages [control]="f['city']"></app-control-messages>
           </div>
           <div class=" form-group">
             <label>{{"postYourResume.zipCode" | translate}}</label>
-            <input numbersOnly formControlName="zipcode" type="text" class="form-control"
+            <input autocomplete="disabled" autocomplete="disabled"  numbersOnly formControlName="zipcode" type="text" class="form-control"
               [placeholder]="'postYourResume.zipCode' | translate">
               <!-- <app-control-messages [control]="f['zipcode']"></app-control-messages> -->
           </div>
@@ -85,14 +85,14 @@
           </div>
           <div class="form-group">
             <label>{{"postYourResume.state" | translate}}</label>
-            <input appMarkAsterisk formControlName="state" type="text" class="form-control text-capitalize"
+            <input autocomplete="disabled"  appMarkAsterisk formControlName="state" type="text" class="form-control text-capitalize"
               [placeholder]="'postYourResume.state' | translate">
             <app-control-messages [control]="f['state']"></app-control-messages>
           </div>
 
           <div class="form-group">
             <label>{{"postJob.country" | translate}}</label>
-            <input appMarkAsterisk formControlName="country" type="text" class="form-control text-uppercase"
+            <input autocomplete="disabled"  appMarkAsterisk formControlName="country" type="text" class="form-control text-uppercase"
               [placeholder]="'postYourResume.country' | translate">
               <app-control-messages [control]="f['country']"></app-control-messages>
           </div>
