--- a/frontend/src/app/modules/features/user/applied-job/applied-job.component.html
+++ b/frontend/src/app/modules/features/user/applied-job/applied-job.component.html
@@ -16,7 +16,7 @@
 						</thead>
 						<tbody>
 							<ng-container *ngIf="appliedJobs?.length; else elseTemplate">
-							<ng-container *ngFor="let item of appliedJobs">
+							<ng-container *ngFor="let item of appliedJobs; let j = index">
 								<tr >
 									<td>
 										<a [routerLink]="[ '/user/candidate-job-view/details' ]" [queryParams]="{id:item?.job_posting?.id,path:'applied' }"  class="text-capitalize" href="javacript:;">
@@ -36,10 +36,32 @@
 									<td>
 										{{item?.created_at ? (item?.created_at | date: "MMM dd, y") : '-'}}
 									</td>
-									<td >
-										<a class="text-blue" data-toggle="collapse" [href]="getIdVal(item)" (click)="stopPropagation($event);">
-											Status
+									<td *ngIf="item?.short_listed == true && item?.status == 2 ">
+										<a class="text-success text-capitalize" data-toggle="collapse" [href]="getIdVal(item)" (click)="stopPropagation($event,item,j);">
+											{{itemReturn(item?.status,item?.application_status)}}
 											<i class="fas fa-caret-down"></i>
+											<span class="badges" *ngIf="item?.view == false " [id]="j" >1</span>
+										</a>
+									</td>
+									<td *ngIf="item?.short_listed == true && item?.status != 2 && item?.status != 4 && item?.status != 5 && item?.status != 6">
+										<a class="text-warning text-capitalize" data-toggle="collapse" [href]="getIdVal(item)" (click)="stopPropagation($event,item,j);">
+											{{itemReturn(item?.status,item?.application_status)}}
+											<i class="fas fa-caret-down"></i>
+											<span class="badges" *ngIf="item?.view == false " [id]="j">1</span>
+										</a>
+									</td>
+									<td *ngIf="item?.short_listed == true && (item?.status == 4 || item?.status == 5 || item?.status == 6) ">
+										<a class="text-danger text-capitalize" data-toggle="collapse" [href]="getIdVal(item)" (click)="stopPropagation($event,item,j);">
+											{{itemReturn(item?.status,item?.application_status)}}
+											<i class="fas fa-caret-down"></i>
+											<span class="badges" *ngIf="item?.view == false " [id]="j" >1</span>
+										</a>
+									</td>
+									<td *ngIf="item?.short_listed == false ">
+										<a class="text-danger text-capitalize"  data-toggle="collapse" [href]="getIdVal(item)" (click)="stopPropagation($event,item,j);">
+											Not a Fit
+											<i class="fas fa-caret-down"></i>
+											<span class="badges" *ngIf="item?.view == false " [id]="j" >1</span>
 										</a>
 									</td>
 									<!-- <td class="text-center"><a (click)="deleteJobApplication(item?.id)" class="text-danger"><i class="fas fa-trash-alt"></i></a></td>  -->
@@ -64,7 +86,7 @@
 																	<p>{{items?.comments}}</p>
 																</div>
 															</li>
-															<li class="pending" *ngIf="items?.id != '4' && items?.id != '2' && items?.id != 1&& items?.id != '1' && items?.id != '5' && items?.id != '6'" >
+															<li class="pending" *ngIf="items?.id != '98' && items?.id != '4' && items?.id != '2' && items?.id != 1&& items?.id != '1' && items?.id != '5' && items?.id != '6'" >
 																<div class="date">
 																	<h5 class="">{{items?.date | date: 'longDate' }}</h5>
 																</div>
@@ -88,7 +110,7 @@
 																	<p>{{items?.comments}}</p>
 																</div>
 															</li>
-															<li class="rejected" *ngIf="items?.id == '5' || items?.id == '6'|| items?.id == '4' " >
+															<li class="rejected" *ngIf="items?.id == '98' ||items?.id == '5' || items?.id == '6'|| items?.id == '4' " >
 																<div class="date">
 																	<h5 class="">{{items?.date | date: 'longDate' }}</h5>
 																</div>
