--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-personal-details/create-candidate-personal-details.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-personal-details/create-candidate-personal-details.component.html
@@ -59,7 +59,7 @@
       <div class="col-lg-4 col-md-6">
         <div class=" form-group">
           <label>{{"postYourResume.city" | translate}}</label>
-          <input autocomplete="off" appMarkAsterisk ngx-google-places-autocomplete
+          <input autocomplete="disabled"  autocomplete="off" appMarkAsterisk ngx-google-places-autocomplete
           (onAddressChange)="handleAddressChange($event)"
           formControlName="city" type="text" class="form-control text-capitalize" [placeholder]="'postYourResume.city' | translate">
           <app-control-messages [control]="f['city']"></app-control-messages>
@@ -68,7 +68,7 @@
       <div class="col-lg-4 col-md-6">
         <div class=" form-group">
           <label>{{"postYourResume.state" | translate}}</label>
-          <input appMarkAsterisk formControlName="state" type="text" class="form-control text-capitalize" [placeholder]="'postYourResume.state' | translate">
+          <input autocomplete="disabled"  appMarkAsterisk formControlName="state" type="text" class="form-control text-capitalize" [placeholder]="'postYourResume.state' | translate">
           <app-control-messages [control]="f['state']"></app-control-messages>
         </div>
       </div>
@@ -86,7 +86,7 @@
       <div class="col-lg-4 col-md-6">
         <div class=" form-group">
            <label>{{"postYourResume.country" | translate }}</label>
-          <input appMarkAsterisk formControlName="country" type="text" class="form-control text-uppercase" placeholder="Country" style="text-transform: capitalize !important">
+          <input autocomplete="disabled" appMarkAsterisk formControlName="country" type="text" class="form-control text-uppercase" placeholder="Country" style="text-transform: capitalize !important">
           <app-control-messages [control]="f['country']"></app-control-messages>
         </div>
       </div>
