--- a/frontend/src/app/modules/features/employer/job-detail-view/job-detail-view.component.html
+++ b/frontend/src/app/modules/features/employer/job-detail-view/job-detail-view.component.html
@@ -114,6 +114,11 @@
               <h6>Applicants - 14</h6> -->
             </div>
           </div>
+		  <mat-paginator style="background: #f8f8f8;color: #000;" (page)="handlePageEvent($event)"
+			[length]="length"
+			[pageSize]="limit" [pageSizeOptions]="pageSizeOptions"
+			[pageIndex]="page-1">
+		</mat-paginator>
         </div>
       </div>
     </div>
