--- a/frontend/src/app/modules/features/user/applied-job/applied-job.component.html
+++ b/frontend/src/app/modules/features/user/applied-job/applied-job.component.html
@@ -64,6 +64,13 @@
 											<span class="badges" *ngIf="item?.view == false " [id]="j" >1</span>
 										</a>
 									</td>
+									<td *ngIf="(item?.short_listed == null || item?.short_listed == false) && item?.status == 1 ">
+										<a class="text-success text-capitalize"  data-toggle="collapse" [href]="getIdVal(item)" (click)="stopPropagation($event,item,j);">
+											Applied 
+											<i class="fas fa-caret-down"></i>
+											<span class="badges" *ngIf="item?.view == false " [id]="j" >1</span>
+										</a>
+									</td>
 									<!-- <td class="text-center"><a (click)="deleteJobApplication(item?.id)" class="text-danger"><i class="fas fa-trash-alt"></i></a></td>  -->
 								</tr>
 								<!--Message Collapse -->
