Bug Fixing and ios design issues changes

--- a/frontend/src/app/modules/features/employer/job-detail-view/job-detail-view.component.css
+++ b/frontend/src/app/modules/features/employer/job-detail-view/job-detail-view.component.css
@@ -10,3 +10,8 @@
     color: #465666;
     margin-bottom: 7px;
 }
+.job-card h5 {
+    width: auto !important;
+    height: auto !important;
+    white-space: inherit !important;
+}
