--- a/frontend/src/app/modules/features/employer/post-job/modal/job-preview/job-preview.component.css
+++ b/frontend/src/app/modules/features/employer/post-job/modal/job-preview/job-preview.component.css
@@ -40,10 +40,10 @@
 .handsExps:hover{
 		overflow-x:auto !important;
 	}
-.small, small {
+/* .small, small {
     font-size: 14px !important;
     font-weight: 600 !important;
-}
+} */
 .job-cardh6 {
     font-weight: 700;
     font-size: 13px;
