--- a/frontend/src/app/modules/features/employer/profile/create-employer-profile/create-employer-profile.component.html
+++ b/frontend/src/app/modules/features/employer/profile/create-employer-profile/create-employer-profile.component.html
@@ -52,9 +52,9 @@
           </div>
           <div class=" form-group">
             <label>{{"postYourResume.zipCode" | translate}}</label>
-            <input autocomplete="disabled" autocomplete="disabled"  numbersOnly formControlName="zipcode" type="text" class="form-control"
+            <input autocomplete="disabled" [maxLength]="5" autocomplete="disabled"  OnlyNumber="true" formControlName="zipcode" type="text" class="form-control"
               [placeholder]="'postYourResume.zipCode' | translate">
-              <!-- <app-control-messages [control]="f['zipcode']"></app-control-messages> -->
+              <app-control-messages [control]="f['zipcode']"></app-control-messages>
           </div>
 
         </div>
