--- a/frontend/src/app/modules/features/user/candidate-job-view/candidate-job-view.component.html
+++ b/frontend/src/app/modules/features/user/candidate-job-view/candidate-job-view.component.html
@@ -30,7 +30,8 @@
 										<h5 class="text-capitalize">{{postedJobsDetails?.title}}</h5>
 									</div>
 									<div class="col-lg-6 text-right" >
-										<a class="btn btn-outline-green btn-sm" (click)="onToggleResumeSelectModal(true, postedJobsDetails)" style="margin-right: 4px;" href="javascript:;" *ngIf="isShowApply" ><i class="fas fa-file-alt"></i> Apply</a>
+										<a class="btn btn-outline-green btn-sm" *ngIf="postedJobsDetails?.is_job_applied == 0" (click)="onToggleResumeSelectModal(true, postedJobsDetails)" style="margin-right: 4px;" href="javascript:;" ><i class="fas fa-file-alt"></i> Apply</a>
+										<a class="btn btn-outline-green btn-sm applied-btn-green" *ngIf="postedJobsDetails?.is_job_applied != 0" style="margin-right: 4px;" href="javascript:;" ><i class="fas fa-file-alt"></i> Applied</a>
 										<a class="btn btn-outline-blue btn-sm" (click)="onToggleJDModal(true)" href="javascript:;" style="margin-right: 4px;"><i class="fas fa-file-alt"></i> Description</a>
 										<a class="btn btn-outline-blue btn-sm"  *ngIf="isShowApply"  (click)="navigateMatches()" href="javascript:;"><i class="fas fa-file-alt"></i> Show Matches</a>
 										
