--- a/frontend/src/app/shared/component/shared-job-profile-matches/shared-job-profile-matches.component.css
+++ b/frontend/src/app/shared/component/shared-job-profile-matches/shared-job-profile-matches.component.css
@@ -63,3 +63,14 @@
 	border:none !important;
 	outline:none !important;
 }
+
+.pj-title  h6{
+	display: contents !important;
+}
+.pj-titles{
+    padding: 5px 0;
+    border-bottom: 1px solid #ffc0d8;
+}
+.pj-titles  h6{
+	display: -webkit-inline-box !important;
+}
