--- a/frontend/src/app/shared/component/shared-user-profile-job-matches/shared-user-profile-job-matches.component.html
+++ b/frontend/src/app/shared/component/shared-user-profile-job-matches/shared-user-profile-job-matches.component.html
@@ -330,7 +330,7 @@
 			</div> -->
 		</div>
 		<div class="accordion mt-3 " *ngIf="desired">
-			<div class="pj-title"><h6 type="button" class="mb-0"></h6></div>
+			<div class="pj-titles"><h6 type="button" class="mb-0"></h6></div>
 			<div style="margin-top:-12px;" *ngIf="postedJobsDetails?.match_select?.experience=='1'">
 				<div class="row">
 					<div class="col-lg-4 caption">
@@ -648,7 +648,7 @@
 			</div>
 		</div>
 		<div class="accordion mt-0 " *ngIf="nice">
-			<div class="pj-title"><h6 type="button" class="mb-0"></h6></div>
+			<div class="pj-titles"><h6 type="button" class="mb-0"></h6></div>
 			<div style="margin-top:-12px;" *ngIf="postedJobsDetails?.match_select?.experience=='2'">
 				<div class="row">
 					<div class="col-lg-4 caption">
@@ -966,7 +966,7 @@
 			</div>
 		</div>
 		<div class="accordion mt-2" *ngIf="optional">
-			<div class="pj-title"><h6 type="button" class="mb-0"></h6></div>
+			<div class="pj-titles"><h6 type="button" class="mb-0"></h6></div>
 			<div style="margin-top:-12px;" *ngIf="postedJobsDetails?.match_select?.experience==''">
 				<div class="row">
 					<div class="col-lg-4 caption">
