--- a/frontend/src/app/shared/component/shared-user-profile-job-multiple-matches/shared-user-profile-job-multiple-matches.component.css
+++ b/frontend/src/app/shared/component/shared-user-profile-job-multiple-matches/shared-user-profile-job-multiple-matches.component.css
@@ -44,3 +44,13 @@
 	border:none !important;
 	outline:none !important;
 }
+.pj-title  h6{
+	display: contents !important;
+}
+.pj-titles{
+    padding: 5px 0;
+    border-bottom: 1px solid #ffc0d8;
+}
+.pj-titles  h6{
+	display: -webkit-inline-box !important;
+}
